[package]
name = "todos"
version = "0.1.1"
edition = "2021"
authors = ["Samuel Štancl <samuel@archte.ch>"]
description = "An intuitive system for organizing TODOs in code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3.1"
termcolor = "1.4.0"
